// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dss compiles 1`] = `
Object {
  "a": Array [
    "dss_rfc3hq-169mlyl",
    "dss_16bwgo5-11z5xnj",
    "dss_1u3exn4-nfznl2",
    "dss_1u3exn4-1ysx8fe",
    "dss_1qphpw1-hlr2nt",
  ],
}
`;

exports[`dss compiles 2`] = `
"
      .a { color: red; }
      .a:hover { color: blue; }
      @media screen and (min-width: 30px) {
        .a { color: hotpink }
      }

      :hover > .a {
        color: orange;
      }

      :hover + .a {
        display: block;
      }
    

⬇⬇⬇⬇

.dss_1u3exn4-nfznl2:hover{color:blue}.dss_rfc3hq-169mlyl{color:red}:hover + .dss_1qphpw1-hlr2nt{display:block}:hover > .dss_1u3exn4-1ysx8fe{color:orange}@media screen and (min-width: 30px){.dss_16bwgo5-11z5xnj{color:hotpink}}"
`;

exports[`dss compiles fallbacks 1`] = `
Object {
  "a": Array [
    "dss_rfc3hq-1t0ure0",
  ],
}
`;

exports[`dss compiles fallbacks 2`] = `
"
      .a {
        color: red;
        color: green;
      }
    

⬇⬇⬇⬇

.dss_rfc3hq-1t0ure0{color:red;color:green}"
`;

exports[`dss compiles keyframes 1`] = `
Object {
  "a": Array [
    "dss_8obr3c-13wqbd",
  ],
}
`;

exports[`dss compiles keyframes 2`] = `
"
      @font-face {
        font-family: 'foo';
        src: url(http://b.ar)
      }
      .a {
        transition: fade 0.5s easy-out;
      }
      @keyframes some {0% { opacity:0 } 100% { opacity:1}}
      @keyframes fade {0% { opacity:0 } 100% { opacity:1}}
      @keyframes fade {
        0% { opacity:0; margin-left: 0; }
        100% { opacity:1; margin-left: 100; }
      }
    

⬇⬇⬇⬇

.dss_8obr3c-13wqbd{transition:fade 0.5s easy-out}@font-face{font-family:'foo';src:url(http://b.ar)}@keyframes fade{0%{opacity:0;margin-left:0}100%{opacity:1;margin-left:100}}@keyframes fade{0%{opacity:0}100%{opacity:1}}@keyframes some{0%{opacity:0}100%{opacity:1}}"
`;

exports[`dss does not have duplicates 1`] = `
Object {
  "bar": Array [
    "dss_14e3233-hlr2nt",
  ],
  "foo": Array [
    "dss_14e3233-hlr2nt",
  ],
}
`;

exports[`dss does not have duplicates 2`] = `".dss_14e3233-hlr2nt{display:block}"`;
